<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    android:scrollbars="none"
    android:background="@color/background_color_white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="oko.tm.car_control.MainActivity"
        android:background="@color/background_color_white">

        <TextView
            android:text="@string/text_1"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView_1"
            android:background="@color/background_color_white"
            android:phoneNumber="true"
            android:typeface="serif" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton1_on"

            android:layout_below="@+id/textView_1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/alarm_on"
            android:background="@color/background_color_white"/>

        <TextView
            android:text="@string/text_on"
            android:layout_width="120dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/textView_1_on"
            android:textAlignment="center"
            android:background="@color/background_color_white"
            android:layout_alignLeft="@+id/imageButton1_on"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/imageButton1_on"
            android:textIsSelectable="false"
            android:visibility="visible" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton1_off"
            android:layout_alignTop="@+id/imageButton1_on"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"

            android:src="@drawable/alarm_off"
            android:background="@color/background_color_white" />

        <TextView
            android:text="@string/text_off"
            android:layout_width="120dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/textView_1_off"
            android:textAlignment="center"
            android:background="@color/background_color_white"
            android:layout_alignLeft="@+id/imageButton1_off"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/imageButton1_off"
            android:visibility="visible" />


        <TextView
            android:text="@string/text_2"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_1_on"
            android:layout_centerHorizontal="true"

            android:id="@+id/textView_2"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:background="@color/background_color_white"
            android:typeface="serif" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2_on"

            android:layout_below="@+id/textView_2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/block_on"
            android:background="@color/background_color_white"/>

        <TextView
            android:text="@string/text_on"
            android:layout_width="120dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/textView_2_on"
            android:textAlignment="center"
            android:background="@color/background_color_white"
            android:layout_alignLeft="@+id/imageButton2_on"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/imageButton2_on"
            android:visibility="visible" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2_off"
            android:layout_alignTop="@+id/imageButton2_on"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"

            android:src="@drawable/block_off"
            android:background="@color/background_color_white" />

        <TextView
            android:text="@string/text_off"
            android:layout_width="120dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/textView_2_off"
            android:textAlignment="center"
            android:background="@color/background_color_white"
            android:layout_alignLeft="@+id/imageButton2_off"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/imageButton2_off"
            android:visibility="visible" />




<!--

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone"
            android:id="@+id/textView_phone"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/textView_2_on"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/txtPhoneNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_phone"
            android:layout_alignParentLeft="true"
            android:phoneNumber="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_password"
            android:layout_below="@+id/txtPhoneNo"
            android:layout_alignParentLeft="true"
            android:text="@string/enter_password" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_password"
            android:layout_alignParentLeft="true"
            android:password="true"
            android:text="1234" />
-->

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_2_on"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true">
        </Spinner>

        <Button
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_send_command"
            android:text="Отправить команду"
            android:layout_width="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="2dp"
            android:layout_alignParentLeft="true">
        </Button>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/web_server"
            android:id="@+id/textView_server"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btn_send_command"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/manuf"
            android:id="@+id/textView_manuf"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView_server"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            />

    </RelativeLayout>

</ScrollView>
